Add `deinitializeDMD` function to deinitialize the front end
This is a start of being able to restore the global state initialized
by `initDMD` to its original state. It only deinitializes state
initialized by `initDMD`, state store directly inside functions are
not restored.

This is useful to invoke the compiler multiple times within the same
application. This allows to write more fine grained tests for the
compiler, more of a unit test style compared to the current end to end
tests.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,9 @@ jobs:
           command: sudo ls -l /dlang/dmd-2.078.0/linux && sudo ls -l /dlang/dmd-2.078.0/src
           name: Test Docker image
       - run:
+          command: ./.circleci/run.sh install-dub
+          name: Install Dub
+      - run:
           # needs to be a separate step, s.t. `run.sh` gets updated too
           command: ./.circleci/run.sh setup-repos
           name: Merge with upstream + clone DRuntime & Phobos
